2001-09-03  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ and docs/faq/exult_faq.xml: updated FAQ	
	* README and docs/readme/readme.xml: Updated Documentation

2001-09-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/chunks.cc: fixed crash (is_roof() needs tile coords, not abs.)

2001-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc,chunks.cc:  Wrote find_spot(), a smarter finder of
	free areas for things.  Still fiddling with it.
	* actors.cc,paths.cc:  When a companion fails to find a path
	towards the Avatar, he/she now tries to walk offscreen, then
	return.  Helps avoid slowdowns.

2001-09-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed divisions by zero

2001-08-31  Willem Jan Palenstijn  <wjpalenstijn@users.sourceforge.net>
	* actors.*, intrinsics.cc: fixed Erethian dropping steaks, by not
	having monsters created by create_new_object get equipment

2001-08-31  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Sew_schedule): Fixed crash in Sew_schedule.

2001-08-30  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc,gameclk.cc,gamewin.cc:  Restore HP's, mana hourly.

2001-08-29  Ryan Nunn <triforce@merlin.net.au>
	* audio/midi_drivers/win_midiout.* : Enumerate the midi devices and
	  output the list to stdout. Allow setting of the midi device with the
	  config key "config/audio/midi/win32_device". -1 (Midi Mapper) is
	  defualt as always.

2001-08-29  Max Horn <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: OS X build via makefile fixed
	* macosx/exult.icns: added icon file for OS X

2001-08-28  Ryan Nunn <triforce@merlin.net.au>
	* audio/midi_drivers/win_midiout.cc : Fixed new hanging note problem

2001-08-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: avoid possible crash
	* gamewin.*, palette.h: added a 'bool repaint' to 'apply palette' funcs
	* schedule.cc: fixed crash in Sew_schedule

2001-08-26  Jeff Freedman  <jeff@amy.nerble.net>
